<resources>
    <string name="app_name">U B E R</string>
    <string name="welcome">Welcome</string>
    <string name="rider">Rider</string>
    <string name="driver">Driver</string>
    <string name="login_rbutton">LOG IN AS A RIDER</string>
    <string name="login_dbutton">LOG IN AS A DRIVER</string>
    <string name="sign_up_rbutton">SIGN UP AS A RIDER</string>
    <string name="sign_up_dbutton">SIGN UP AS A DRIVER</string>
    <string name="create_account">Sign Up To Ride</string>
    <string name="create_drv_account">Sign Up to Drive</string>
    <string name="next_btn">Next</string>
    <string name="create_car">Create New Car</string>
    <string name="personal_info">Personal Info</string>
    <string name="car_info">Car Info</string>
    <string name="login">LOG IN</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="Address">Address</string>
    <string name="submit_button">SUBMIT</string>
    <string name="address">Where to?</string>
    <string name="schedule_trip">Schedule New Trip</string>
    <string name="schedule_btn">Schedule Ride</string>
    <string name="pickUp_date">PickUp Date</string>
    <string name="pickUp_time">PickUp Time</string>
    <string name="pickUp_location">PickUp Location</string>
    <string name="destination">Enter your destination</string>
    <string name="fare">Fare Estimated</string>
    <string name="vehicle">Vehicles</string>
    <string name="new_car">Add A Car</string>
    <string name="add_car">Add New Car</string>
    <string name="manufacture">Manufacture</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="registrationPlate">Registration Plate</string>
    <string name="color">Color</string>
    <string name="save">Save</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="new_credit_card">Add A Credit Card</string>
    <string name="add_credit_card">Add New Credit Card</string>
    <string name="card_number">Card Number</string>
    <string name="name">CardHolder Name</string>
    <string name="cvv">CVV</string>
    <string name="month">Month</string>
    <string name="Estimated_fare">Estimated Fare: </string>
    <string name="dollar">$14</string>
    <string name="request_uber">Request Uber</string>
    <string name="payment">Payment</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="open_nav_menu">nav_drawer_open</string>
    <string name="close_nav_menu">nav_drawer_close</string>
    <string name="my_profile">My Profile</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="my_address">Address</string>
    <string name="country">Select Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="trip_history">Trip History</string>
    <string name="my_trips">My Trips</string>
    <string name="trip_details">Trip Details</string>
    <string name="date">Date</string>
    <string name="pick_up_point">Pick Up Point</string>
    <string name="destination_point">Destination Point</string>
    <string name="ride_distance">Ride Distance</string>
    <string name="time_taken">Time taken</string>
    <string name="wait_time">Wait Time</string>
    <string name="fare_amount">Fare Amount</string>
    <string name="value">Value</string>
    <string name="end_trip">End Trip</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="complete_payment">Your payment is complete</string>
    <string name="ok">OK</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="new_password">Enter New Password</string>
    <string name="retype_password">Retype New Password</string>
    <string name="bchange_password">Change Password</string>
    <string name="total_trips">Total Trips</string>
    <string name="km">Km</string>
    <string name="earnings">Earnings</string>
    <string name="week_statistics">Statistics per week</string>
    <string name="month_statistics">Statistics per month</string>
    <string name="select_car">Please Select A Car</string>
</resources>