<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vehicle"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/vehicle" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_car_black"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
    </group>
    <group
        android:id="@+id/bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/log_out" />
    </group>
</menu>