<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/ic_arrow_back"
             />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/add_car"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="28sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/til_manufacture"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_manufacture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/manufacture"
                        android:inputType="text"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/til_model"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/model"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/til_year"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/year"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/til_registrationPlate"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_registrationPlate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registrationPlate"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/til_color"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/color"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/button_submit"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/save"
                    android:textAlignment="center"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/mresponse"
                    android:layout_marginTop="35dp"
                    android:visibility = "gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>


</RelativeLayout>